--- a/modules-available/locationinfo/templates/page-servers.html
+++ b/modules-available/locationinfo/templates/page-servers.html
@@ -2,50 +2,67 @@
 
 <p>{{lang_serverTableHints}}</p>
 
-<table class="table table-hover">
-	<thead>
-	<tr>
-		<th width="1">{{lang_serverType}}</th>
-		<th>{{lang_locationName}}</th>
-		<th width="1"></th>
-		<th width="1"></th>
-	</tr>
-	</thead>
-	<tbody>
-	{{#serverlist}}
-	<form method="post" action="?do=locationinfo">
-		<input type="hidden" name="token" value="{{token}}">
-		<input type="hidden" name="serverid" value="{{serverid}}">
+<form method="post" action="?do=locationinfo">
+	<table class="table table-hover">
+		<thead>
 		<tr>
-			<td nowrap>{{typename}}</td>
-			<td nowrap>{{servername}}</td>
-
-			<td align="center" nowrap>
-				<button class="btn btn-xs {{^autherror}}btn-default{{/autherror}}{{#autherror}}btn-danger{{/autherror}}"
-						data-server-edit="{{serverid}}" {{disabled}} {{perms.backend.edit.disabled}} type="button">
-					<span class="glyphicon glyphicon-cog"></span>
-					{{lang_edit}}
-				</button>
-				<button class="btn btn-xs btn-primary server-check" {{disabled}} {{perms.backend.check.disabled}}
-						name="action" value="checkConnection" type="submit">
-					<span class="glyphicon glyphicon-refresh"></span>
-					{{lang_checkConnection}}
-				</button>
-			</td>
-			<td align="center" nowrap>
-				<button class="btn btn-xs btn-danger server-delete" type="submit" name="action" value="deleteServer"
-					{{perms.backend.edit.disabled}}>
-					<span class="glyphicon glyphicon-trash"></span>
-					{{lang_delete}}
-				</button>
-			</td>
+			<th class="text-center slx-smallcol">{{lang_serverType}}</th>
+			<th>{{lang_locationName}}</th>
+			<th class="text-center slx-smallcol">{{lang_edit}}</th>
+			<th class="text-center slx-smallcol">{{lang_checkConnection}}</th>
+			<th class="text-center slx-smallcol">{{lang_delete}}</th>
 		</tr>
-	</form>
-	{{/serverlist}}
-	</tbody>
-</table>
+		</thead>
+		<tbody>
+		{{#serverlist}}
+			<input type="hidden" name="token" value="{{token}}">
+			<input type="hidden" name="serverid" value="{{serverid}}">
+			<tr>
+				<td nowrap>{{typename}}</td>
+				<td nowrap>{{servername}}</td>
 
-<div>
+				<td class="text-center">
+					<button class="btn btn-xs {{^autherror}}btn-default{{/autherror}}{{#autherror}}btn-danger{{/autherror}}"
+							data-server-edit="{{serverid}}" {{disabled}} {{perms.backend.edit.disabled}} type="button">
+						<span class="glyphicon glyphicon-cog"></span>
+					</button>
+				</td>
+				<td class="text-center">
+					<button class="btn btn-xs btn-primary server-check" {{disabled}} {{perms.backend.check.disabled}}
+							name="action" value="checkConnection" type="submit">
+						<span class="glyphicon glyphicon-refresh"></span>
+					</button>
+				</td>
+				<td class="text-center">
+					<button type="button" class="btn btn-xs btn-danger" data-toggle="modal" data-target="#deleteModal" {{perms.backend.edit.disabled}}>
+						<span class="glyphicon glyphicon-trash"></span>
+					</button>
+				</td>
+			</tr>
+		{{/serverlist}}
+		</tbody>
+	</table>
+
+	<div class ="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+					<h4 class="modal-title" id="myModalLabel">{{lang_delete}}</h4>
+				</div>
+				<div class="modal-body">
+					<p>{{lang_deleteConfirmation}}</p>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-default" data-dismiss="modal">{{lang_cancel}}</button>
+					<button type="submit" name="action" value="deleteServer" class="btn btn-danger"><span class="glyphicon glyphicon-trash"></span> {{lang_delete}}</button>
+				</div>
+			</div>
+		</div>
+	</div>
+</form>
+
+<div class="text-right">
 	<button class="btn btn-sm btn-success" id="addServerButton" onclick="addServer()">
 		<span class="glyphicon glyphicon-plus"></span>
 		{{lang_addServer}}
@@ -54,7 +71,6 @@
 
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog">
 	<div class="modal-dialog">
-
 		<div class="modal-content">
 			<div class="modal-header" id="myModalHeader"></div>
 			<div class="modal-body" id="myModalBody"></div>
@@ -63,7 +79,6 @@
 				<button type="submit" id="myModalSubmitButton" class="btn btn-primary" form="">{{lang_save}}</button>
 			</div>
 		</div>
-
 	</div>
 </div>
 
