[serversetup-bwlp] Minor html tweaks

--- a/modules-available/serversetup-bwlp/templates/ipxe-new-boot-entry.html
+++ b/modules-available/serversetup-bwlp/templates/ipxe-new-boot-entry.html
@@ -19,11 +19,11 @@
 			<div class="form-group">
 				<div class="radio">
 					<input class="type-radio" type="radio" name="type" value="exec" id="type-exec" {{exec_checked}}>
-					<label for="type-exec">{{lang_execEntry}}</label>
+					<label for="type-exec">{{lang_typeExecEntry}}</label>
 				</div>
 				<div class="radio">
 					<input class="type-radio" type="radio" name="type" value="script" id="type-script" {{script_checked}}>
-					<label for="type-script">{{lang_scriptEntry}}</label>
+					<label for="type-script">{{lang_typeScriptEntry}}</label>
 				</div>
 			</div>
 
