--- a/modules-available/serversetup-bwlp/templates/menu-list.html
+++ b/modules-available/serversetup-bwlp/templates/menu-list.html
@@ -21,13 +21,15 @@
 			</td>
 			<td align="center">
 				{{^isdefault}}
-					<form method="post" action="?do=serversetup" {{^showSetDefault}}style="display: none;"{{/showSetDefault}}>
+					{{#showSetDefault}}
+					<form method="post" action="?do=serversetup">
 						<input type="hidden" name="token" value="{{token}}">
 						<input type="hidden" name="menuid" value="{{menuid}}">
 						<button type="submit" name="action" value="setDefaultMenu" class="btn btn-xs btn-info">
-							<span class="glyphicon glyphicon-ok"></span>
+							<span class="glyphicon glyphicon-flag"></span>
 						</button>
 					</form>
+					{{/showSetDefault}}
 				{{/isdefault}}
 				{{#isdefault}}
 					<span class="glyphicon glyphicon-ok"></span>
