[sysconfig] Add UI option to let ldadp generate uidNumbers

--- a/modules-available/sysconfig/templates/ad_ldap-homedir.html
+++ b/modules-available/sysconfig/templates/ad_ldap-homedir.html
@@ -18,6 +18,7 @@
 		<input type="hidden" name="mapping[{{field}}]" value="{{value}}">
 	{{/mapping}}
 	<input name="fixnumeric" value="{{fixnumeric}}" type="hidden">
+	<input name="genuid" value="{{genuid}}" type="hidden">
 	<input name="fingerprint" value="{{fingerprint}}" type="hidden">
 
 	<div class="slx-bold">{{lang_credentialPassing}}</div>
