--- a/modules-available/sysconfig/templates/ldap-start.html
+++ b/modules-available/sysconfig/templates/ldap-start.html
@@ -68,6 +68,16 @@
 	<br>
 	<div>
 		<div class="checkbox">
+			<input id="num-cb" type="checkbox" name="genuid" {{#genuid}}checked{{/genuid}}>
+			<label for="num-cb"><b>{{lang_genUid}}</b></label>
+		</div>
+		<div>
+			<i>{{lang_genUidDescription}}</i>
+		</div>
+	</div>
+	<br>
+	<div>
+		<div class="checkbox">
 			<input id="num-cb" type="checkbox" name="fixnumeric" {{#fixnumeric}}checked{{/fixnumeric}}>
 			<label for="num-cb"><b>{{lang_fixNumeric}}</b></label>
 		</div>
