--- a/modules-available/sysconfig/templates/ad-selfsearch.html
+++ b/modules-available/sysconfig/templates/ad-selfsearch.html
@@ -43,6 +43,7 @@
 			<input type="hidden" name="mapping[{{field}}]" value="{{value}}">
 		{{/mapping}}
 		<input name="fixnumeric" value="{{fixnumeric}}" type="hidden">
+		<input name="genuid" value="{{genuid}}" type="hidden">
 		<button type="submit" class="btn btn-primary">&laquo; {{lang_back}}</button>
 	</form>
 </div>
@@ -67,6 +68,7 @@
 			<input type="hidden" name="mapping[{{field}}]" value="{{value}}">
 		{{/mapping}}
 		<input name="fixnumeric" value="{{fixnumeric}}" type="hidden">
+		<input name="genuid" value="{{genuid}}" type="hidden">
 		<input name="fingerprint" value="{{fingerprint}}" type="hidden">
 		<button id="nextbutton" type="submit" class="btn btn-primary" style="display:none">{{lang_skip}} &raquo;</button>
 	</form>
