--- a/modules-available/sysconfig/templates/ad_ldap-checkconnection.html
+++ b/modules-available/sysconfig/templates/ad_ldap-checkconnection.html
@@ -31,6 +31,7 @@
 		{{/mapping}}
 
 		<input name="fixnumeric" value="{{fixnumeric}}" type="hidden">
+		<input name="genuid" value="{{genuid}}" type="hidden">
 		<button type="submit" class="btn btn-primary">&laquo; {{lang_back}}</button>
 	</form>
 </div>
@@ -55,6 +56,7 @@
 			<input type="hidden" name="mapping[{{field}}]" value="{{value}}">
 		{{/mapping}}
 		<input name="fixnumeric" value="{{fixnumeric}}" type="hidden">
+		<input name="genuid" value="{{genuid}}" type="hidden">
 		<input name="originalbinddn" value="{{binddn}}" type="hidden">
 		<button id="nextbutton" type="submit" class="btn btn-primary" style="display:none">{{lang_next}} &raquo;</button>
 	</form>
