--- a/modules-available/sysconfig/templates/ad_ldap-checkcredentials.html
+++ b/modules-available/sysconfig/templates/ad_ldap-checkcredentials.html
@@ -26,6 +26,7 @@
 			<input type="hidden" name="mapping[{{field}}]" value="{{value}}">
 		{{/mapping}}
 		<input name="fixnumeric" value="{{fixnumeric}}" type="hidden">
+		<input name="genuid" value="{{genuid}}" type="hidden">
 		<button type="submit" class="btn btn-primary">&laquo; {{lang_back}}</button>
 	</form>
 </div>
@@ -49,6 +50,7 @@
 			<input type="hidden" name="mapping[{{field}}]" value="{{value}}">
 		{{/mapping}}
 		<input name="fixnumeric" value="{{fixnumeric}}" type="hidden">
+		<input name="genuid" value="{{genuid}}" type="hidden">
 		<input name="fingerprint" value="{{fingerprint}}" type="hidden">
 		<input name="originalbinddn" value="{{binddn}}" type="hidden">
 		<button id="nextbutton" type="submit" class="btn btn-primary" style="display:none">{{lang_skip}} &raquo;</button>
