[dozmod] ldapfilter: Update table scheme, fix minor bugs
* Editing filter showed wrong success message
* Made all methods static
* Fix listing existing filters

--- a/modules-available/dozmod/templates/ldapfilter-add.html
+++ b/modules-available/dozmod/templates/ldapfilter-add.html
@@ -17,11 +17,11 @@
 			</div>
 			<div class="input-group">
 				<label class="input-group-addon" for="attribute">{{lang_ldapFilterAttribute}}</label>
-				<input type="text" name="attribute" id ="attribute" class="form-control" placeholder="" value="{{attribute}}" required>
+				<input type="text" name="attribute" id ="attribute" class="form-control" placeholder="" value="{{filterkey}}" required>
 			</div>
 			<div class="input-group">
 				<label class="input-group-addon" for="value">{{lang_ldapFilterValue}}</label>
-				<input type="text" name="value" id ="value" class="form-control" placeholder="" value="{{value}}" required>
+				<input type="text" name="value" id ="value" class="form-control" placeholder="" value="{{filtervalue}}" required>
 			</div>
 
 			<div class="text-right" style="margin-top: 20px;">
