--- a/modules-available/dozmod/templates/networkshares-edit.html
+++ b/modules-available/dozmod/templates/networkshares-edit.html
@@ -21,7 +21,7 @@
 			<div class="input-group">
 				<label class="input-group-addon" for="target">{{lang_target}}</label>
 				<select class="form-control" name="target" id="target">
-					<option value="" ></option>
+					<option value="-">{{lang_none}}</option>
 					<option value="D">D:</option><option value="E">E:</option><option value="F">F:</option>
 					<option value="G">G:</option><option value="H">H:</option><option value="I">I:</option>
 					<option value="J">J:</option><option value="K">K:</option><option value="L">L:</option>
@@ -30,22 +30,23 @@
 					<option value="S">S:</option><option value="T">T:</option><option value="U">U:</option>
 					<option value="V">V:</option><option value="W">W:</option><option value="X">X:</option>
 					<option value="Y">Y:</option><option value="Z">Z:</option>
+					<option value="PRINTER">{{lang_printer}}</option>
 				</select>
 			</div>
 			<div class="input-group">
 				<label class="input-group-addon" for="auth">{{lang_authMethod}}</label>
-				<select class="form-control" id="auth">
-					<option value="loggedInUser" {{loggedInUser}}>{{lang_loggedInUser}}</option>
-					<option value="specificUser" {{specificUser}}>{{lang_specificUser}}</option>
+				<select class="form-control" name="auth" id="auth">
+					<option value="LOGIN_USER" {{loggedInUser_selected}}>{{lang_loggedInUser}}</option>
+					<option value="OTHER_USER" {{specificUser_selected}}>{{lang_specificUser}}</option>
 				</select>
 			</div>
 			<div class="input-group">
 				<label class="input-group-addon" for="username">{{lang_username}}</label>
-				<input required type="text" name="username" id ="username" class="form-control" value="{{username}}" {{#loggedInUser}}disabled{{/loggedInUser}}>
+				<input required type="text" name="username" id ="username" class="form-control" value="{{username}}" {{#loggedInUser_selected}}disabled{{/loggedInUser_selected}}>
 			</div>
 			<div class="input-group">
 				<label class="input-group-addon" for="password">{{lang_password}}</label>
-				<input required type="password" name="password" id ="password" class="form-control" value="{{password}}" {{#loggedInUser}}disabled{{/loggedInUser}}>
+				<input required type="password" name="password" id ="password" class="form-control" value="{{password}}" {{#loggedInUser_selected}}disabled{{/loggedInUser_selected}}>
 			</div>
 			<div class="text-right" style="margin-top: 20px">
 				<a href="?do=dozmod&amp;section=networkshares" class="btn btn-default">
@@ -64,21 +65,19 @@
 
 	document.addEventListener("DOMContentLoaded", function () {
 
-		$('#target').val('{{target}}');
+		$('#target').val('{{mountpoint}}');
 
 		$('#auth').change(function () {
 			var username = $('#username');
 			var password = $('#password');
-			if ($(this).val() === 'specificUser') {
+			if ($(this).val() === 'OTHER_USER') {
 				username.prop('disabled', false);
 				password.prop('disabled', false);
 			} else {
 				username.prop('disabled', true);
 				password.prop('disabled', true);
-				username.val('');
-				password.val('');
 			}
-		});
+		}).change();
 
 	})
 
