--- a/modules-available/dozmod/templates/networkshares.html
+++ b/modules-available/dozmod/templates/networkshares.html
@@ -1,5 +1,9 @@
 <h1>{{lang_networkshares}}</h1>
 
+<p>
+	{{lang_networksharesIntro}}
+</p>
+
 <table class="table">
 	<thead>
 		<tr>
@@ -20,18 +24,32 @@
 		<tr>
 			<td>{{sharename}}</td>
 			<td>{{path}}</td>
-			<td>{{#target}}{{.}}:{{/target}}</td>
-			<td>{{#specificUser}}{{lang_specificUser}}{{/specificUser}}{{^specificUser}}{{lang_loggedInUser}}{{/specificUser}}</td>
-			<td>{{#specificUser}}{{username}}{{/specificUser}}</td>
+			<td>{{mountpoint}}</td>
+			<td>
+				{{#loginAsUser}}{{lang_loggedInUser}}{{/loginAsUser}}
+				{{^loginAsUser}}{{lang_specificUser}}{{/loginAsUser}}
+			</td>
+			<td>
+				{{^loginAsUser}}{{username}}{{/loginAsUser}}
+			</td>
 			{{#hasEditPermissions}}
-			<td align="center">
+			<td class="text-nowrap">
 				<form method="post" action="?do=dozmod">
 					<input type="hidden" name="token" value="{{token}}">
 					<input type="hidden" name="section" value="networkshares">
 					<input type="hidden" name="shareid" value="{{shareid}}">
-					<button type="submit" name="action" value="toggleActive" class="btn btn-xs {{^active}}btn-default{{/active}}{{#active}}btn-info{{/active}}">
-						<span class="glyphicon {{^active}}glyphicon-flag{{/active}}{{#active}}glyphicon-ok{{/active}}"></span>
-					</button>
+					{{#active}}
+						<span class="glyphicon glyphicon-ok text-success"></span>
+						<button type="submit" name="action" value="deactivate" class="btn btn-xs btn-default">
+							<span class="glyphicon glyphicon-remove"></span>
+						</button>
+					{{/active}}
+					{{^active}}
+						<span class="glyphicon glyphicon-remove text-danger"></span>
+						<button type="submit" name="action" value="activate" class="btn btn-xs btn-default">
+							<span class="glyphicon glyphicon-ok"></span>
+						</button>
+					{{/active}}
 				</form>
 			</td>
 			<td align="center">
