--- a/modules-available/dozmod/templates/networkshares-edit.html
+++ b/modules-available/dozmod/templates/networkshares-edit.html
@@ -42,11 +42,11 @@
 			</div>
 			<div class="input-group">
 				<label class="input-group-addon" for="username">{{lang_username}}</label>
-				<input required type="text" name="username" id ="username" class="form-control" value="{{username}}" {{#loggedInUser_selected}}disabled{{/loggedInUser_selected}}>
+				<input required type="text" name="username" id="username" class="form-control" value="{{username}}" {{#loggedInUser_selected}}disabled{{/loggedInUser_selected}}>
 			</div>
 			<div class="input-group">
 				<label class="input-group-addon" for="password">{{lang_password}}</label>
-				<input required type="password" name="password" id ="password" class="form-control" value="{{password}}" {{#loggedInUser_selected}}disabled{{/loggedInUser_selected}}>
+				<input required type="{{password_type}}" name="password" id="password" class="form-control" value="{{password}}" {{#loggedInUser_selected}}disabled{{/loggedInUser_selected}}>
 			</div>
 			<div class="text-right" style="margin-top: 20px">
 				<a href="?do=dozmod&amp;section=networkshares" class="btn btn-default">
