--- a/modules-available/locationinfo/templates/page-config-panel-default.html
+++ b/modules-available/locationinfo/templates/page-config-panel-default.html
@@ -107,6 +107,22 @@
 								</div>
 							</div>
 						</div>
+
+						<div class="list-group-item">
+							<div class="row">
+								<div class="col-sm-3">
+									<label for="input-roomplaner">{{lang_useRoomplaner}}</label>
+								</div>
+								<div class="col-sm-7">
+									<input id="input-roomplaner" type="checkbox" name="roomplaner" {{roomplaner_checked}}>
+								</div>
+								<div class="col-sm-2">
+									<p class="btn btn-static helptext" title="{{lang_roomplanerTooltip}}">
+										<span class="glyphicon glyphicon-question-sign"></span>
+									</p>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
