[locationinfo] roomplaner -> roomplanner

--- a/modules-available/locationinfo/templates/page-config-panel-summary.html
+++ b/modules-available/locationinfo/templates/page-config-panel-summary.html
@@ -74,13 +74,13 @@
 						<div class="list-group-item">
 							<div class="row">
 								<div class="col-sm-3">
-									<label for="input-roomplaner">{{lang_useRoomplaner}}</label>
+									<label for="input-roomplanner">{{lang_useRoomplanner}}</label>
 								</div>
 								<div class="col-sm-7">
-									<input id="input-roomplaner" type="checkbox" name="roomplaner" {{roomplaner_checked}}>
+									<input id="input-roomplanner" type="checkbox" name="roomplanner" {{roomplanner_checked}}>
 								</div>
 								<div class="col-sm-2">
-									<p class="btn btn-static helptext" title="{{lang_roomplanerTooltip}}">
+									<p class="btn btn-static helptext" title="{{lang_roomplannerTooltip}}">
 										<span class="glyphicon glyphicon-question-sign"></span>
 									</p>
 								</div>
