[runmode] Simple back/cancel button

--- a/modules-available/runmode/templates/machine-selector.html
+++ b/modules-available/runmode/templates/machine-selector.html
@@ -13,6 +13,7 @@
 	<select id="machine-sel" name="machines[]" multiple {{disabled}}>
 	</select>
 	<div class="buttonbar">
+		<button type="button" class="btn btn-default" onClick="javascript:history.back()">{{lang_cancel}}</button>
 		<button type="submit" class="btn btn-primary" {{disabled}}>{{lang_save}}</button>
 	</div>
 </form>
