[dozmod] Add editor for predefined run scripts
Assigning scripts to certain locations only is currently not possible.
Whether this is required is to be discussed, since predefined scripts
selectable by bwLehrpool-Suite users would almost cover this use case.

Refs #3145

--- a/modules-available/dozmod/style.css
+++ b/modules-available/dozmod/style.css
@@ -49,3 +49,23 @@
 .table > tbody > tr > td > div {
   display: inline-block;
 }
+
+/* number of columns in tree view depending on screen size */
+.column-list {
+  column-gap: 20px;
+  column-count: 2;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+@media (min-width: 768px) {
+  .column-list {
+    column-count: 3;
+  }
+}
+
+@media (min-width: 992px) {
+  .column-list {
+    column-count: 4;
+  }
+}
